--- a/vision-widgets/src/bsmu/vision/widgets/images/icons.qrc
+++ b/vision-widgets/src/bsmu/vision/widgets/images/icons.qrc
@@ -8,6 +8,10 @@ D:\Projects\vision\vision-widgets\src\bsmu\vision\widgets\images> pyside2-rcc ic
 <qresource>
     <file>icons/arrow-down.svg</file>
     <file>icons/arrow-up.svg</file>
+    <file>icons/arrow-outlined-down.svg</file>
+    <file>icons/arrow-outlined-down-disabled.svg</file>
+    <file>icons/arrow-outlined-up.svg</file>
+    <file>icons/arrow-outlined-up-disabled.svg</file>
     <file>icons/eye.svg</file>
     <file>icons/eye-crossed-out.svg</file>
     <file>icons/eye-outlined.svg</file>
