feat(polyline): Support pause and resume drawing on tool switch. Fix cursor icon updates during tool switch

--- a/src/bsmu/vision/plugins/tools/images/icons.qrc
+++ b/src/bsmu/vision/plugins/tools/images/icons.qrc
@@ -6,7 +6,8 @@ To generate a *.py file use the next command in the terminal:
 <!DOCTYPE RCC>
 <RCC version="1.0">
 <qresource>
-    <file>icons/brush.svg</file>
     <file>icons/hand.svg</file>
+    <file>icons/brush.svg</file>
+    <file>icons/polyline-cursor.svg</file>
 </qresource>
 </RCC>
